resources/css/style.css
body {
    background-color: black;
    text-align: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

/* HEADINGS */
.header--main {
    font-weight: normal;
    font-size: 50px;
    color: white;
}
.header--secondary {
    color: white;
    font-weight: 300;
    font-size: 42px;
}
.header--sub-header {
    color: grey;
    font-size: 21px;
}

/* LINKS */
.link--cta {
    font-size: 16px;
    color: aquamarine;
}

/* LINKS */
.footer--copyright {
    color: white;
    font-size: 21px;
    text-align: right;
}

